# kirigamisettings

./: CMakeLists.txt  README.md  kirigamisettings.kdev4  org.kde.kirigamisettings.desktop  org.kde.kirigamisettings.json  org.kde.kirigamisettings.metainfo.xml
.obs/: workflows.yml
android/: AndroidManifest.xml  build.gradle
src/: CMakeLists.txt  about.cpp  about.h  app.cpp  app.h  kirigamisettingsconfig.kcfgc  main.cpp  resources.qrc
src/backend/: aboutsystembackend.cpp  aboutsystembackend.h  colorschemesbackend.cpp  colorschemesbackend.h  cursorsbackend.cpp  cursorsbackend.h  iconsbackend.cpp  iconsbackend.h  plasmastylebackend.cpp  plasmastylebackend.h  wallpapersbackend.cpp  wallpapersbackend.h
src/contents/ui/: About.qml  AboutSystemPage.qml  ColorSchemesPage.qml  CursorsPage.qml  FloatingActionButton.qml  GeneralBehaviorPage.qml  IconsPage.qml  LooksPage.qml  NetworkPage.qml  PlasmaStylePage.qml  SoundPage.qml  WallpapersPage.last.qml  WallpapersPage.qml  main.qml
